--- a/chrome_extensions/hello_world/manifest.json
+++ b/chrome_extensions/hello_world/manifest.json
@@ -11,5 +11,6 @@
     "browser_action":{
         "default_icon": "icon48.jpg",
         "default_popup": "popup.html"
-    }
+    },
+    "content_security_policy": "script-src 'self' https://example.com; object-src 'self'"
 }
